force-app/main/default/objects/Project_Email_Thread__c/Project_Email_Thread__c.object-meta.xml
<CustomObject>
    <label>Project Email Thread</label>
    <nameField>
        <displayFormat>PET-{00000}</displayFormat>
        <label>Email Thread</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Email Threads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>