force-app/main/default/objects/Project_Email_Thread__c/fields/of_Attachments__c.field-meta.xml
<CustomField>
    <fullName>of_Attachments__c</fullName>
    <label># of Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>