force-app/main/default/objects/Project_Email_Thread__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Link to the project that  owns this thread</description>
    <label>Project</label>
    <referenceTo>strk__Project__c</referenceTo>
    <relationshipLabel>Project Email Threads</relationshipLabel>
    <relationshipName>Project_Email_Threads</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>