force-app/main/default/objects/Project_Email_Thread__c/fields/Responses__c.field-meta.xml
<CustomField>
    <fullName>Responses__c</fullName>
    <description>Count of responses on this thread</description>
    <label>Responses</label>
    <summaryForeignKey>Project_Email__c.Project_Email_Thread__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>