force-app/main/default/objects/Project_Email_Thread__c/fields/Thread_Subject__c.field-meta.xml
<CustomField>
    <fullName>Thread_Subject__c</fullName>
    <label>Thread Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>